# durable-execution-mcp-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  demo_flow.py  deploy.py  fastmcp.json  justfile  pyproject.toml  test_flow.py
.claude/commands/: implement-eval.md
.github/workflows/: ci.yml  publish.yml
evals/: DEBUGGING.md  README.md  conftest.py  test_create_proactive_automation.py  test_create_reactive_automation.py  test_debug_automation_not_firing.py  test_flow_run_failure_reason.py  test_last_failing_flow_run.py  test_list_flows.py  test_trigger_deployment_run.py
evals/_tools/: spy.py  write_file.py
evals/late_runs/: conftest.py  test_cancel_late_runs.py  test_deployment_concurrency.py  test_tag_concurrency.py  test_unhealthy_work_pool.py  test_work_pool_concurrency.py  test_work_queue_concurrency.py
evals/rate_limits/: conftest.py  test_cloud_correlate_logs.py  test_cloud_direct.py  test_cloud_no_throttling.py
evals/tools/: __init__.py  read_file.py  run_shell_command.py  spy.py
examples/pydantic-ai-demo/: .env.example  README.md  demo_flow.py  deploy.py  pyproject.toml
scenarios/: README.md  justfile  pyproject.toml
scenarios/src/scenarios/: __init__.py
scenarios/tests/: conftest.py
scenarios/tests/evals/: test_last_failing_flow_run.py
scripts/: create_test_deployment.py  setup_concurrency_test.py  test_docs_mcp.py  test_identity.py  test_inspection.py  test_mcp_client.py
src/docs_mcp_server/: __main__.py  _server.py  _settings.py  pyproject.toml
src/ingestion_pipeline/: main.py  pyproject.toml
src/prefect_mcp_server/: __init__.py  __main__.py  _prefect_client.py  server.py  settings.py  types.py
src/prefect_mcp_server/_prefect_client/: __init__.py  automations.py  dashboard.py  deployments.py  events.py  flow_runs.py  flows.py  identity.py  rate_limits.py  task_runs.py  work_pools.py
src/prefect_mcp_server/_prompts/: __init__.py  debug.py
tests/: __init__.py  conftest.py  test_docs_mcp_server.py  test_docs_mcp_settings.py  test_docs_proxy.py  test_flows.py  test_identity.py  test_inspection_integration.py  test_inspection_tools.py  test_prompt.py  test_rate_limits.py  test_server.py
tests/__snapshots__/: test_docs_mcp_server.ambr
tests/cassettes/test_docs_mcp_server/: test_search_prefect_successful_query.yaml
tests/docs_mcp/: test_server.py  test_settings.py
tests/docs_mcp/__snapshots__/: test_server.ambr
tests/docs_mcp/cassettes/test_server/: test_search_prefect_successful_query.yaml
