[project]
name = "pydantic-ai-prefect-demo"
description = "Demo of PydanticAI with PrefectAgent and MCP integration"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai[prefect]>=1.0.10",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "prefect>=3.4.22",
    "logfire>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
