[project]
name = "scenarios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zzstoatzz", email = "thrast36@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "prefect>=3.0.0",
    "pydantic-ai>=1.0.10",
    "mcp>=1.1.0",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
